# WinLIRC

./: .gitmodules  README.md  getwtl.bat
DLL/AudioCapture/: WinlircAudioIn.cpp
DLL/Common/: CMakeLists.txt  LIRCDefines.h
DLL/Serial/: CMakeLists.txt  Globals.cpp  Globals.h  Hardware.cpp  Serial.cpp  SerialDialog.cpp  SerialDialog.h  Settings.cpp  Settings.h  Transmit.cpp  irdriver.cpp  irdriver.h  resource.h  stdafx.h  winlirc.rc  winlirc.vcproj
lib/ComPortCombo/: ComPortCombo.h  EnumDevices.h
lib/Utility/: Event.h  FileFinder.h  HandleTraits.h  Module.h  UniqueHandle.h  WeakHandle.h
winlirc/: CMakeLists.txt  InputPlugin.cpp  InputPlugin.h  dll.h  drvdlg.cpp  drvdlg.h  globals.cpp  globals.h  guicon.cpp  httpserver.cpp  httpserver.h  irconfig.cpp  irconfig.h  irdriver.cpp  irdriver.h  resource.h  server.cpp  server.h  stdafx.h  trayicon.cpp  trayicon.h  winlirc.cpp  winlirc.h  winlirc.rc
winlirc/ui/: index.html  winlirc.js
winlirc/ui/config/: audio.html  serial.html
